# ATM-Project

./: .gitignore  GUI_README.md  Makefile  PROJECT_STRUCTURE.md  README.md  Windows安装指南.md  account_management.c  atm_gui  atm_system.h  main.c  package.json  run_windows.bat  start.bat  test_script.txt  transaction.c  ui.c  utils.c  测试密码输入.txt  项目总结.md
console-system/: README.md  file_operations.c  main.c  run_console.bat  run_console.sh  ui.c
docs/: 修复测试说明.md  项目总结_GUI版本.md
gui-system/: CMakeLists.txt  README.md  build.bat  build.sh  gui_common.h  gui_login.c  test_gui.sh
scripts/: build_windows.bat
windows-gui-system/: DEPLOY.md  Makefile  PROJECT_SUMMARY.md  README.md  account_management.c  atm_system.h  build.bat  file_operations.c  test.bat  transaction.c  utils.c  win_gui_common.c  win_gui_common.h  win_gui_login.c  win_gui_main.c  win_gui_main_entry.c  win_gui_transaction.c
windows-native/: README.md  build_windows.bat  build_windows.ps1  encryption.c  fix_encoding.bat  main.c  run_windows.bat  run_windows.ps1  win_deposit.c  win_gui.h  win_login.c  win_main.c  win_transaction.c  编码问题解决指南.md
windows-standalone/: README.md  build_windows.bat  create_package.bat  gui_common.c  gui_main.c  gui_main_entry.c  gui_transaction.c  main.c  run_windows.bat  utils.c
